--- a/app.json
+++ b/app.json
@@ -14,22 +14,22 @@
   "env": {
     "BOT_TOKEN": {
       "description": "Get this value from @BotFather on Telegram",
-      "value": "",
+      "value": "5181103244:AAGpTTpp6999zGHvd5wu31cgUkddPBmCw_M",
       "required": true
     },
     "GDRIVE_FOLDER_ID": {
       "description": "Google Drive Folder ID to Clone to. (Dont paste a link)",
-      "value": "",
+      "value": "1OK55K4N3YOqQKMSd6DF_1EawGV7713sO",
       "required": true
     },
     "OWNER_ID": {
       "description": "Get this value by sending /id to @kelverbot on Telegram.",
-      "value": "",
+      "value": "5007319313",
       "required": true
     },
     "AUTHORISED_USERS" : {
       "description": "List of user ids to allow bot access to. Note: Write within [] and seperate with ,",
-      "value": "[]",
+      "value": "[1660208371,5007319313,1130574076]",
       "required": false
     },
     "INDEX_URL": {
@@ -38,7 +38,7 @@
     },
     "IS_TEAM_DRIVE": {
       "description": "Does you 'GDRIVE_FOLDER_ID' lead to a Team Drive or Normal Google Drive Folder",
-      "required": false,
+      "required": True,
       "value": "False"
     },
     "USE_SERVICE_ACCOUNTS": {
